<resources>
    <string name="app_name">Discovery</string>

    <string name="tv_option">⋮</string>
    <string name="details">Show details</string>
    <string name="add_search">Add search</string>
    <string name="ex_search">EX search</string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="description">Description</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="menu_lookup_uri">Lookup uri</string>
    <string name="menu_facted_search">Faceted search</string>
    <string name="menu_sliding_window">Sliding window</string>
    <string name="fs_filter_type">Type</string>
    <string name="fs_filter_attribute">Attributes</string>
    <string name="fs_filter_value">Values</string>
    <string name="fs_filter_distinct">Distinct</string>
    <string name="fs_search_advanced">FS advanced</string>
    <string name="search_auto">Auto change search</string>
    <string name="introduction_ex_description">The exploratory search is a new way to search the web, not to find what you are searching, but to find what you are not searching, and might be intersting for you !</string>
    <string name="introduction_ex">Exploratory search</string>
    <string name="introduction_interest">Get recommendations on your interests</string>
    <string name="introduction_interest_description">Want a film recommendation related to writers you like? Interested by more complex and composite recommendations based on your deepest interests.</string>
    <string name="introduction_recommend">Understand a recommendation</string>
    <string name="introduction_recommend_description">System gives you recommendations, but also tools to understand why you have these recommendations, because we know that the more important in a recommendation is to know why you get it !</string>


    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
</resources>
