<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/introduction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_ex"
                android:layout_gravity="center"
                android:gravity="left"
                android:textSize="16sp"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="@string/introduction_ex_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:src="@drawable/introduction_search"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#b4b4b4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_interest"
                android:layout_gravity="center"
                android:gravity="right"
                android:textSize="16sp"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_3sdp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="1.5"
                    android:src="@drawable/introduction_interest"
                    android:background="@android:color/transparent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="@string/introduction_interest_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_recommend"
                android:layout_gravity="center"
                android:gravity="left"
                android:textSize="16sp"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_3sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/introduction_recommend_description"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:src="@drawable/introduction_understand"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

