<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.PlayMusicActivity">

    <TextView android:text="Sound Cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance.Material.Title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:src="@drawable/soundcloud_logo"/>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:id="@+id/button_forward" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:id="@+id/button_pause" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:id="@+id/button_back" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewind"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:id="@+id/button_rewind" />

    </LinearLayout>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignLeft="@+id/textview"
        android:layout_alignStart="@+id/textview"
        android:layout_alignRight="@+id/textview"
        android:layout_alignEnd="@+id/textview"
        android:layout_above="@+id/linear_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 min, 0 sec"
        android:id="@+id/tv_time_count"
        android:layout_above="@+id/seekBar"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:text="0 min, 0 sec"
        android:id="@+id/tv_times_song"
        android:layout_above="@+id/seekBar"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:text="Medium Text"
        android:id="@+id/tv_song_name"
        android:layout_alignBaseline="@+id/tv_time_count"
        android:layout_alignBottom="@+id/tv_time_count"
        android:layout_centerHorizontal="true" />

</RelativeLayout>